--- a/project_name/templates/base.html
+++ b/project_name/templates/base.html
@@ -1,223 +1,97 @@
-<!doctype html>
-<!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
-<html lang="en" data-useragent="">
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ project_name }}</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
 
-    
-    <meta name="description" content="Documentation and reference library for ZURB Foundation. JavaScript, CSS, components, grid and more." />
-    
-    <meta name="author" content="Ilya Rumyantsev" />
-
-    <link rel="stylesheet" href="/static/foundation/css/foundation.min.css" />
-    <script src="/static/foundation/js/modernizr.js"></script>
+    <title>Jumbotron Template for Bootstrap</title>
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/assets/custom.css" rel="stylesheet">
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
   <body>
-
-  <nav class="top-bar" data-topbar>
-    <ul class="title-area">
-      <!-- Title Area -->
-      <li class="name">
-        <h1>
-          <a href="#">
-            {{ project_name }}
-          </a>
-        </h1>
-      </li>
-      <li class="toggle-topbar menu-icon"><a href="#"><span>menu</span></a></li>
-    </ul>
- 
-    <section class="top-bar-section">
-      <!-- Right Nav Section -->
-      {% block navtop %}
-      <ul class="right">
-        <li class="divider"></li>
-        <li class="has-dropdown">
-          <a href="#">Main Item 1</a>
-          <ul class="dropdown">
-            <li><label>Section Name</label></li>
-            <li class="has-dropdown">
-              <a href="#" class="">Has Dropdown, Level 1</a>
-              <ul class="dropdown">
-                <li><a href="#">Dropdown Options</a></li>
-                <li><a href="#">Dropdown Options</a></li>
-                <li><a href="#">Level 2</a></li>
-                <li><a href="#">Subdropdown Option</a></li>
-                <li><a href="#">Subdropdown Option</a></li>
-                <li><a href="#">Subdropdown Option</a></li>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">{{ project_name }}</a>
+        </div>
+        <div class="navbar-collapse collapse">
+	  {% block navtop %}
+	  <ul>
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="#">Action</a></li>
+                <li><a href="#">Another action</a></li>
+                <li><a href="#">Something else here</a></li>
+                <li class="divider"></li>
+                <li class="dropdown-header">Nav header</li>
+                <li><a href="#">Separated link</a></li>
+                <li><a href="#">One more separated link</a></li>
               </ul>
             </li>
-            <li><a href="#">Dropdown Option</a></li>
-            <li><a href="#">Dropdown Option</a></li>
-            <li class="divider"></li>
-            <li><label>Section Name</label></li>
-            <li><a href="#">Dropdown Option</a></li>
-            <li><a href="#">Dropdown Option</a></li>
-            <li><a href="#">Dropdown Option</a></li>
-            <li class="divider"></li>
-            <li><a href="#">See all &rarr;</a></li>
           </ul>
-        </li>
-        <li class="divider"></li>
-        <li><a href="#">Main Item 2</a></li>
-        <li class="divider"></li>
-        <li class="has-dropdown">
-          <a href="#">Main Item 3</a>
-          <ul class="dropdown">
-            <li><a href="#">Dropdown Option</a></li>
-            <li><a href="#">Dropdown Option</a></li>
-            <li><a href="#">Dropdown Option</a></li>
-            <li class="divider"></li>
-            <li><a href="#">See all &rarr;</a></li>
-          </ul>
-        </li>
-      </ul>
-        {% endblock %}
-    </section>
-  </nav>
-
-  <!-- Header -->
-{% block header %}
-  <div class="row">
-    <div class="large-12 columns">
-      <img src="http://placehold.it/1600x600&text=Header"><br><br>
-    </div>
-  </div>
-{% endblock %}
-  <!-- End Header -->
-
-{% block content %}
-  <div class="row">
-
-    <div class="large-3 panel columns">
-      <img src="http://placehold.it/500x500&text=Image">
-
-      <h4>Header</h4>
-
-      <p>Fusce ullamcorper mauris in eros dignissim molestie posuere felis blandit. Aliquam erat volutpat. Mauris ultricies posuere vehicula. Sed sit amet posuere erat. Quisque in ipsum non augue euismod dapibus non et eros.</p><hr>
-
-      <div class="row">
-        <div class="large-4 columns">
-        <a href="#" class="small button">Link</a>
-        </div>
-
-        <div class="large-4 columns">
-        <a href="#" class="small button">Link</a>
-        </div>
-
-        <div class="large-4 columns">
-        <a href="#" class="small button">Link</a>
-        </div>
+	  {% endblock %}
+	</div>
       </div>
     </div>
-
-    <div class="large-9 columns">
-      <div class="panel">
-        <div class="row">
-
-          <div class="large-3 columns">
-            <img src="http://placehold.it/600x500&text=Thumbnail">
-          </div>
-
-          <div class="large-3 columns">
-            <img src="http://placehold.it/600x500&text=Thumbnail">
-          </div>
-
-          <div class="large-3 columns">
-            <img src="http://placehold.it/600x500&text=Thumbnail">
-          </div>
-
-          <div class="large-3 columns">
-            <img src="http://placehold.it/600x500&text=Thumbnail">
-          </div>
-
-          <div class="large-3 columns">
-            <img src="http://placehold.it/600x500&text=Thumbnail">
-          </div>
-
-          <div class="large-3 columns">
-            <img src="http://placehold.it/600x500&text=Thumbnail">
-          </div>
-
-          <div class="large-3 columns">
-            <img src="http://placehold.it/600x500&text=Thumbnail">
-          </div>
-
-          <div class="large-3 columns">
-            <img src="http://placehold.it/600x500&text=Thumbnail">
-          </div>
-
-          <div class="large-3 columns">
-            <img src="http://placehold.it/600x500&text=Thumbnail">
-          </div>
-
-          <div class="large-3 columns">
-            <img src="http://placehold.it/600x500&text=Thumbnail">
-          </div>
-
-          <div class="large-3 columns">
-            <img src="http://placehold.it/600x500&text=Thumbnail">
-          </div>
-
-          <div class="large-3 columns end">
-            <img src="http://placehold.it/600x500&text=Thumbnail">
-          </div>
-        </div>
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      {% block jumboytron %}
+      <div class="container">
+        <h1>Hello, world!</h1>
+        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
       </div>
-
-      <div class="row">
-        <div class="large-6 columns">
-          <div class="panel">
-            <h5>Subheader</h5>
-            <p>Sed sit amet posuere erat. Quisque in ipsum non augue euismod dapibus non et eros.</p>
-            <a href="#" class="small button">Link</a>
-          </div>
-        </div>
-
-        <div class="large-6 columns">
-          <div class="panel">
-            <h5>Subheader</h5>
-            <p>Sed sit amet posuere erat. Quisque in ipsum non augue euismod dapibus non et eros.</p>
-            <a href="#" class="small button">Link</a>
-          </div>
-        </div>
-      </div>
+      {% endblock %}
     </div>
 
-  </div>
-{% endblock %}
-  <!-- Footer -->
-{% block footer %}
-  <footer class="row">
-  <div class="large-12 columns"><hr />
+    <div class="container">
       <div class="row">
-
-        <div class="large-6 columns">
-            <p>&copy; Copyright no one at all. Go to town.</p>
+	{% block content %}
+        <div class="col-md-4">
+          <h2>Heading</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
-
-        <div class="large-6 columns">
-            <ul class="inline-list right">
-              <li><a href="#">Link 1</a></li>
-              <li><a href="#">Link 2</a></li>
-              <li><a href="#">Link 3</a></li>
-              <li><a href="#">Link 4</a></li>
-            </ul>
+        <div class="col-md-4">
+          <h2>Heading</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+       </div>
+        <div class="col-md-4">
+          <h2>Heading</h2>
+          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
-
+	{% endblock %}
       </div>
-  </div>
-  </footer>
-{% endblock %}
 
-    <script src="/static/foundation/js/jquery.js"></script>
-    <script src="/static/js/foundation-min.js"></script>
-    <script>
-      $(document).foundation();
-      var doc = document.documentElement;
-      doc.setAttribute('data-useragent', navigator.userAgent);
-    </script>
+      <hr>
+      
+      <footer>
+	{% block footer %}
+        <p>&copy; Ilya Rumyantsev</p>
+	{% enndblock %}
+      </footer>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
   </body>
 </html>
